# adastra

./: .bazelrc  BUILD.bazel  COPYRIGHT  MODULE.bazel  README.md  WORKSPACE  run_flight.sh
capcom/: BUILD.bazel  bitset.h  capcom.cc  capcom.h  capcom_test.cc  client_handler.cc  client_handler.h  main.cc  state_machine.cc  subsystem.cc  subsystem.h  umbilical.cc  umbilical.h
capcom/client/: BUILD.bazel  client.cc  client.h
common/: BUILD.bazel  alarm.cc  alarm.h  capability.cc  capability.h  cgroup.cc  cgroup.h  event.cc  event.h  log.h  namespace.cc  namespace.h  parameters.cc  parameters.h  parameters_test.cc  scheduler.h  states.h  stream.cc  stream.h  subsystem_status.cc  subsystem_status.h  tcp_client.h  tcp_client_handler.h  telemetry.cc  telemetry.h  vars.h
fido/: BUILD.bazel  alarms.cc  alarms.h  dialog.cc  dialog.h  event_mux.cc  event_mux.h  fido.cc  fido.h  log_window.cc  log_window.h  main.cc  panel.cc  panel.h  processes.cc  processes.h  screen.cc  screen.h  subspace_stats.cc  subspace_stats.h  subsystems.cc  subsystems.h  table.cc  table.h  table_window.cc  table_window.h  window.cc  window.h
flight/: BUILD.bazel  client_handler.cc  client_handler.h  flight_director.cc  flight_director.h  main.cc  subsystem.cc  subsystem.h
flight/client/: BUILD.bazel  client.cc  client.h
flight/command/: flight.cc  flight.h
module/: BUILD.bazel  message.h  module.cc  module.h  module_test.cc  phaser_module.h  phaser_test.cc  protobuf_module.h  publisher.h  ros_module.h  ros_test.cc  subscriber.h
module/testdata/: test.proto  test_module.cc
module/testdata/msg/: Test.msg
proto/: BUILD.bazel  capcom.proto  cgroup.proto  config.proto  control.proto  event.proto  flight.proto  log.proto  parameters.proto  stream.proto  subsystem_status.proto  telemetry.proto
robot/: BUILD.bazel  README.md
robot/flight/computes/: localhost.pb.txt
robot/flight/core/: subspace.pb.txt  zygotes.pb.txt
robot/flight/localization/: gps.pb.txt  localizer.pb.txt
robot/flight/logger/: logger.pb.txt
robot/flight/mapper/: map.pb.txt
robot/flight/vision/: camera.pb.txt  stereo.pb.txt  vision.pb.txt
robot/localization/: BUILD.bazel  gps.cc  localizer.cc
robot/logger/: BUILD.bazel  logger.cc
robot/mapper/: BUILD.bazel  map_server.cc
robot/proto/: BUILD.bazel  gps.proto  header.proto  localizer.proto  map.proto  vision.proto
robot/ros_msgs/: BUILD.bazel
robot/ros_msgs/robot_msgs/msg/: GpsLocation.msg
robot/ros_msgs/std_msgs/msg/: Header.msg
robot/vision/: BUILD.bazel  camera.cc  stereo.cc
stagezero/: BUILD.bazel  cgroup.cc  cgroup.h  client_handler.cc  client_handler.h  main.cc  process.cc  process.h  stagezero.cc  stagezero.h  symbols.cc  symbols.h
stagezero/client/: BUILD.bazel  client.cc  client.h  client_test.cc
stagezero/command/: BUILD.bazel  s0.cc  s0.h
stagezero/parameters/: BUILD.bazel  parameters.cc  parameters.h
stagezero/proto/: BUILD.bazel  config.proto  control.proto
stagezero/telemetry/: BUILD.bazel  telemetry.cc  telemetry.h
stagezero/testdata/: input_data.txt  vars.cc  zygote.cc
stagezero/zygote/: BUILD.bazel  standard_zygote.cc  zygote_core.cc  zygote_core.h
testdata/: BUILD.bazel  echo.cc  echoraw.cc  interactive.cc  listener.cc  loop.cc  module.cc  oneshot.cc  params.cc  talker.cc  telemetry.cc  vars.cc
testdata/flight/computes/: localhost.pb.txt
testdata/flight/core/: subspace  subspace.pb.txt  zygotes.pb.txt
testdata/flight/interactive/: echo.pb.txt
testdata/flight/test_module/: chat.pb.txt
testdata/proto/: chat.proto  telemetry.proto
