package(default_visibility = ["//visibility:public"])

config_setting(
  name = "macos_arm64",
  values = {"cpu": "darwin_arm64"},
)

config_setting(
  name = "macos_default",
  values = {"cpu": "darwin"},
)

config_setting(
  name = "macos_x86_64",
  values = {"cpu": "darwin_x86_64"},
)

sh_binary( 
  name = "run_flight",
  srcs = ["run_flight.sh"],
  data = [
    "//robot",
    "//stagezero",
    "//capcom",
    "//flight:flight_director",
    "//flight:flight"
  ],
)
