module(
    name = "adastra",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "local_repository")

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "abseil-cpp", version = "20230802.0", repo_name = "com_google_absl")
bazel_dep(name = "googletest", version = "1.14.0", repo_name = "com_google_googletest")

# Note, see https://github.com/bazelbuild/bazel/issues/19973
# Protobuf must be aliased as "com_google_protobuf" to match implicit dependency within bazel_tools.
bazel_dep(name = "protobuf", version = "21.7", repo_name = "com_google_protobuf")

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_pkg", version = "0.9.1")
bazel_dep(name = "zlib", version = "1.3.1.bcr.3")

# http_archive(
#   name = "toolbelt",
#   urls = ["https://github.com/dallison/cpp_toolbelt/archive/refs/tags/1.2.1.tar.gz"],
#   strip_prefix = "cpp_toolbelt-1.2.1",
#   sha256 = "d9b4747cd90a4be9984cf623e2b174bc6333592cd381cc11abea659214c85257"
# )

# For local debugging of toolbelt coroutine library.
local_repository(
    name = "toolbelt",
    path = "../cpp_toolbelt",
)

# Coroutines
http_archive(
    name = "coroutines",
    integrity = "sha256-cJ3a89VebabjRgLjHNsEsjIQE+hi+5vdtuAh4RfTXCI=",
    strip_prefix = "co-1.3.7",
    urls = ["https://github.com/dallison/co/archive/refs/tags/1.3.7.tar.gz"],
)

# For local debugging of co coroutine library.
# local_repository(
#     name = "coroutines",
#     path = "../co",
# )

http_archive(
  name = "subspace",
  urls = ["https://github.com/dallison/subspace/archive/refs/tags/1.3.6.tar.gz"],
  strip_prefix = "subspace-1.3.6",
  sha256 = "8150d692b007083124b6dfd92353301bbb70ccb56ea282705eb372bdca2cbf1c"
)

# For local debugging of subspace library.
# local_repository(
#     name = "subspace",
#     path = "../subspace",
# )

# For local debugging of retro library.
# local_repository(
#     name = "retro",
#     path = "../retro",
# )

http_archive(
  name = "retro",
  urls = ["https://github.com/dallison/retro/archive/refs/tags/1.0.2.tar.gz"],
  strip_prefix = "retro-1.0.2",
  # sha256 = "9cc2dfc3f1a5a52ab3c3891167b7f31a041255c9d2ce0c949cea44e0b72ebff1"
)

http_archive(
  name = "davros",
  urls = ["https://github.com/dallison/davros/archive/refs/tags/1.0.0.tar.gz"],
  strip_prefix = "davros-1.0.0",
  sha256 = "56273aa08e7189a4ff0de5abf0b16aa517c9b83d7019ed9fe6c22a54db93a658"
)

# For local debugging of davros library.
# local_repository(
#     name = "davros",
#     path = "../davros",
# )

http_archive(
  name = "phaser",
  urls = ["https://github.com/dallison/phaser/archive/refs/tags/1.0.2.tar.gz"],
  strip_prefix = "phaser-1.0.2",
  sha256 = "ab08201620e27685a03b8cca1f8447c812f6b7ad4de99ae3ef136e6cf5813974"
)

# For local debugging of phaser library.
# local_repository(
#     name = "phaser",
#     path = "../phaser",
# )
