module(
    name = "adastra",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "local_repository")

bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "abseil-cpp", version = "20240722.0.bcr.1", repo_name = "com_google_absl")
bazel_dep(name = "googletest", version = "1.15.2", repo_name = "com_google_googletest")

# Note, see https://github.com/bazelbuild/bazel/issues/19973
# Protobuf must be aliased as "com_google_protobuf" to match implicit dependency within bazel_tools.
bazel_dep(name = "protobuf", version = "29.0", repo_name = "com_google_protobuf")

bazel_dep(name = "rules_cc", version = "0.0.16")
bazel_dep(name = "rules_pkg", version = "1.0.1")
bazel_dep(name = "zlib", version = "1.3.1.bcr.3")

http_archive(
    name = "toolbelt",
    integrity = "sha256-sMbIIW0Rin1J8oC4RB/83K68L0pHVaShv3l9fb3nczM=",
    strip_prefix = "cpp_toolbelt-1.2.8",
    urls = ["https://github.com/dallison/cpp_toolbelt/archive/refs/tags/1.2.8.tar.gz"],
)
# For local debugging of toolbelt coroutine library.
# local_repository(
#     name = "toolbelt",
#     path = "../cpp_toolbelt",
# )

# Coroutines
http_archive(
    name = "coroutines",
    integrity = "sha256-P4nLeTzHht8uk/Jzee5OGRVgRD4Dr8Ww61RBpl0mp1E=",
    strip_prefix = "co-2.0.2",
    urls = ["https://github.com/dallison/co/archive/refs/tags/2.0.2.tar.gz"],
)

# For local debugging of co coroutine library.
# local_repository(
#     name = "coroutines",
#     path = "../co",
# )

http_archive(
    name = "subspace",
    urls = ["https://github.com/dallison/subspace/archive/refs/tags/2.0.6.tar.gz"],
    strip_prefix = "subspace-2.0.6",
    integrity = "sha256-KnWaFHJsq7l7HJWvq16lILzWhlEfD9SWTisbSnUS15Q=",
)

# For local debugging of subspace library.
# local_repository(
#     name = "subspace",
#     path = "../subspace",
#)

# For local debugging of retro library.
# local_repository(
#     name = "retro",
#     path = "../retro",
# )

http_archive(
  name = "retro",
  urls = ["https://github.com/dallison/retro/archive/refs/tags/1.0.2.tar.gz"],
  strip_prefix = "retro-1.0.2",
  # sha256 = "9cc2dfc3f1a5a52ab3c3891167b7f31a041255c9d2ce0c949cea44e0b72ebff1"
)

http_archive(
  name = "neutron",
  urls = ["https://github.com/dallison/neutron/archive/refs/tags/1.0.3.tar.gz"],
  strip_prefix = "neutron-1.0.3",
  integrity = "sha256-XNpB6mZSbpctyRSLXNMgw7KroXLplZdQzTZRs+LwzG8="
)

# For local debugging of neutron library.
# local_repository(
#     name = "neutron",
#     path = "../neutron",
# )

http_archive(
  name = "phaser",
  urls = ["https://github.com/dallison/phaser/archive/refs/tags/1.0.3.tar.gz"],
  strip_prefix = "phaser-1.0.3",
  integrity = "sha256-eVOGXPGjC3/NRSrYBPJoETrfm1dCnfBAP0EVfsWTD+E="
)

# For local debugging of phaser library.
# local_repository(
#     name = "phaser",
#     path = "../phaser",
# )
