package(default_visibility = ["//visibility:public"])

cc_library(
    name = "common",
    srcs = [
        "alarm.cc",
        "cgroup.cc",
        "event.cc",
        "namespace.cc",
        "stream.cc",
        "subsystem_status.cc",
    ],
    hdrs = [
        "alarm.h",
        "cgroup.h",
        "event.h",
        "log.h",
        "namespace.h",
        "states.h",
        "stream.h",
        "subsystem_status.h",
        "tcp_client.h",
        "tcp_client_handler.h",
        "vars.h",
    ],
    deps = [
        "//proto:capcom_cc_proto",
        "//proto:config_cc_proto",
        "//proto:event_cc_proto",
        "//proto:subsystem_status_cc_proto",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:str_format",
        "@coroutines//:co",
        "@toolbelt//toolbelt",
    ],
)
