package(default_visibility = ["//visibility:public"])

cc_library(
    name = "common",
    srcs = [
        "alarm.cc",
        "capability.cc",
        "cgroup.cc",
        "event.cc",
        "namespace.cc",
        "parameters.cc",
        "stream.cc",
        "subsystem_status.cc",
    ],
    hdrs = [
        "alarm.h",
        "cgroup.h",
        "capability.h",
        "event.h",
        "log.h",
        "namespace.h",
        "parameters.h",
        "scheduler.h",
        "states.h",
        "stream.h",
        "subsystem_status.h",
        "tcp_client.h",
        "tcp_client_handler.h",
        "vars.h",
    ],
    deps = [
        "//proto:capcom_cc_proto",
        "//proto:config_cc_proto",
        "//proto:event_cc_proto",
        "//proto:parameters_cc_proto",
        "//proto:subsystem_status_cc_proto",
        "//proto:telemetry_cc_proto",
        "//stagezero/telemetry",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:str_format",
        "@coroutines//:co",
        "@toolbelt//toolbelt",
        "@com_google_protobuf//:protobuf",
    ],
)

cc_test(
    name = "parameters_test",
    size = "small",
    srcs = ["parameters_test.cc"],
    deps = [
        ":common",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
    ],
)
