package(default_visibility = ["//visibility:public"])

cc_library(
    name = "fidolib",
    srcs = [
        "alarms.cc",
        "fido.cc",
        "log_window.cc",
        "processes.cc",
        "subspace_stats.cc",
        "subsystems.cc",
        "event_mux.cc",
    ],
    hdrs = [
        "alarms.h",
        "fido.h",
        "log_window.h",
        "processes.h",
        "subspace_stats.h",
        "subsystems.h",
        "event_mux.h",
    ],
    deps = [
        "//common",
        "@retro//retro",
        "//flight/client",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:str_format",
        "@coroutines//:co",
        "@subspace//client:subspace_client",
        "@subspace//proto:subspace_cc_proto",
        "@toolbelt//toolbelt",
    ],
)

cc_binary(
    name = "fido",
    srcs = ["main.cc"],
    deps = [
        ":fidolib",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
    ],
)
