package(default_visibility = ["//visibility:public"])

cc_library(
    name = "flight_lib",
    srcs = [
        "flight_director.cc",
    ],
    hdrs = [
        "flight_director.h",
    ],
    deps = [
        "//capcom/client",
        "//proto:capcom_cc_proto",
        "//proto:config_cc_proto",
        "//common",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:str_format",
        "@coroutines//:co",
        "@toolbelt//toolbelt",
    ],
)

cc_binary(
    name = "flight",
    srcs = [
        "main.cc",
    ],
    deps = [
        ":flight_lib",
    ],
)

cc_test(
    name = "flight_test",
    size = "small",
    srcs = ["flight_test.cc"],
    data = [
        "//testdata:echo",
        "//testdata:files",
        "//testdata:loop",
        "//testdata:module.so",
        "//testdata:vars",
        "//testdata:zygote",
    ],
    deps = [
        ":flight_lib",
        "//stagezero:stagezero_lib",
        "//capcom/client",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest",
        "@coroutines//:co",
    ],
)
