package(default_visibility = ["//visibility:public"])

cc_library(
    name = "flight_lib",
    srcs = [
        "client_handler.cc",
        "flight_director.cc",
        "subsystem.cc",
    ],
    hdrs = [
        "client_handler.h",
        "flight_director.h",
        "subsystem.h",
    ],
    deps = [
        "//capcom/client",
        "//common",
        "//proto:capcom_cc_proto",
        "//proto:config_cc_proto",
        "//proto:flight_cc_proto",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:str_format",
        "@coroutines//:co",
        "@toolbelt//toolbelt",
    ],
)

cc_binary(
    name = "flight",
    srcs = [
        "main.cc",
    ],
    deps = [
        ":flight_lib",
    ],
)

cc_test(
    name = "flight_test",
    size = "small",
    srcs = ["flight_test.cc"],
    data = [
        "//testdata:echo",
        "//testdata:files",
        "//testdata:loop",
        "//testdata:module.so",
        "//testdata:vars",
        "//testdata:zygote",
    ],
    deps = [
        ":flight_lib",
        "//capcom/client",
        "//stagezero:stagezero_lib",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest",
        "@coroutines//:co",
    ],
)
