package(default_visibility = ["//visibility:public"])

cc_library(
    name = "flight_lib",
    srcs = [
        "client_handler.cc",
        "flight_director.cc",
    ],
    hdrs = [
        "client_handler.h",
        "flight_director.h",
        "subsystem.h",
    ],
    deps = [
        "//capcom/client",
        "//common",
        "//proto:capcom_cc_proto",
        "//proto:config_cc_proto",
        "//proto:flight_cc_proto",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:str_format",
        "@coroutines//:co",
        "@toolbelt//toolbelt",
    ],
)

cc_binary(
    name = "flight_director",
    srcs = [
        "main.cc",
    ],
    deps = [
        ":flight_lib",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
    ],
)

cc_binary(
    name = "flight",
    srcs = [
        "command/flight.cc",
        "command/flight.h",
    ],
    data = [
        ":flight_director",
        "//capcom",
        "//stagezero",
        "//stagezero/zygote:standard_zygote",
        "//testdata:flight",
        "//testdata:listener.so",
        "//testdata:talker.so",
        "//testdata:echoraw",
        "//robot/vision:camera.so",
        "//robot/vision:stereo.so",
        "@subspace//server:subspace_server",
    ],
    deps = [
        "//flight/client",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/status",
        "@toolbelt//toolbelt",
    ],
)

filegroup(
    name = "testflight",
    data = [
        ":flight",
        "//capcom",
        "//stagezero",
        "//testdata:flight",
        "//testdata:listener.so",
        "//testdata:talker.so",
    ],
)

