package(default_visibility = ["//visibility:public"])

cc_library(
    name = "module",
    srcs = [
        "module.cc",
    ],
    hdrs = [
        "module.h",
    ],
    deps = [
        ":test_cc_proto",
        "@com_google_absl//absl/container:flat_hash_map",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:span",
        "@coroutines//:co",
        "@subspace//client:subspace_client",
        "@toolbelt//toolbelt",
    ],
)

cc_library(
    name = "protobuf_module",
    hdrs = [
        "protobuf_module.h",
    ],
    deps = [
        ":module",
    ],
)

cc_test(
    name = "module_test",
    size = "small",
    srcs = ["module_test.cc"],
    deps = [
        ":protobuf_module",
        "@com_google_absl//absl/flags:flag",
        "@com_google_absl//absl/flags:parse",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest",
        "@coroutines//:co",
        "@subspace//client:subspace_client",
        "@subspace//server",
    ],
)

proto_library(
    name = "test_proto",
    srcs = ["testdata/test.proto"],
)

cc_proto_library(
    name = "test_cc_proto",
    deps = [":test_proto"],
)

cc_binary(
    name = "test_module.so",
    srcs = [
        "testdata/test_module.cc",
    ],
    linkshared = 1,
    linkstatic = 0,
    deps = [
        ":module",
    ],
)
