package(default_visibility = ["//visibility:public"])

proto_library(
    name = "config_proto",
    srcs = ["config.proto"],
)

cc_proto_library(
    name = "config_cc_proto",
    deps = [":config_proto"],
)


proto_library(
    name = "control_proto",
    srcs = ["control.proto"],
    deps = [
        ":config_proto",
    ],
)

cc_proto_library(
    name = "control_cc_proto",
    deps = [":control_proto"],
)

proto_library(
    name = "capcom_proto",
    srcs = ["capcom.proto"],
    deps = [
        ":config_proto",
    ],
)

cc_proto_library(
    name = "capcom_cc_proto",
    deps = [":capcom_proto"],
)
