package(default_visibility = ["//visibility:public"])

proto_library(
    name = "config_proto",
    srcs = ["config.proto"],
)

cc_proto_library(
    name = "config_cc_proto",
    deps = [":config_proto"],
)

proto_library(
    name = "control_proto",
    srcs = ["control.proto"],
    deps = [
        ":config_proto",
        ":stream_proto",
    ],
)

cc_proto_library(
    name = "control_cc_proto",
    deps = [":control_proto"],
)

proto_library(
    name = "capcom_proto",
    srcs = ["capcom.proto"],
    deps = [
        ":config_proto",
        ":event_proto",
        ":subsystem_status_proto",
        ":stream_proto",
    ],
)

cc_proto_library(
    name = "capcom_cc_proto",
    deps = [":capcom_proto"],
)

proto_library(
    name = "flight_proto",
    srcs = ["flight.proto"],
    deps = [
        ":capcom_proto",
        ":config_proto",
        ":event_proto",
        ":subsystem_status_proto",
    ],
)

cc_proto_library(
    name = "flight_cc_proto",
    deps = [":flight_proto"],
)

proto_library(
    name = "event_proto",
    srcs = ["event.proto"],
    deps = [
        ":subsystem_status_proto",
    ],
)

cc_proto_library(
    name = "event_cc_proto",
    deps = [":event_proto"],
)

proto_library(
    name = "stream_proto",
    srcs = ["stream.proto"],
)

cc_proto_library(
    name = "stream_cc_proto",
    deps = [":stream_proto"],
)

proto_library(
    name = "subsystem_status_proto",
    srcs = ["subsystem_status.proto"],
)

cc_proto_library(
    name = "subsystem_status_cc_proto",
    deps = [":subsystem_status_proto"],
)
