package(default_visibility = ["//visibility:public"])

proto_library(
    name = "config_proto",
    srcs = ["config.proto"],
    deps = [
        ":cgroup_proto",
        ":stream_proto",
        ":parameters_proto",
    ],
)

cc_proto_library(
    name = "config_cc_proto",
    deps = [":config_proto"],
)

proto_library(
    name = "control_proto",
    srcs = ["control.proto"],
    deps = [
        ":cgroup_proto",
        ":config_proto",
        ":log_proto",
        ":parameters_proto",
        ":stream_proto",
    ],
)

cc_proto_library(
    name = "control_cc_proto",
    deps = [":control_proto"],
)

proto_library(
    name = "capcom_proto",
    srcs = ["capcom.proto"],
    deps = [
        ":config_proto",
        ":event_proto",
        ":log_proto",
        ":parameters_proto",
        ":stream_proto",
        ":subsystem_status_proto",
    ],
)

cc_proto_library(
    name = "capcom_cc_proto",
    deps = [":capcom_proto"],
)

proto_library(
    name = "flight_proto",
    srcs = ["flight.proto"],
    deps = [
        ":capcom_proto",
        ":config_proto",
        ":event_proto",
        ":log_proto",
        ":stream_proto",
        ":subsystem_status_proto",
    ],
)

cc_proto_library(
    name = "flight_cc_proto",
    deps = [":flight_proto"],
)

proto_library(
    name = "cgroup_proto",
    srcs = ["cgroup.proto"],
)

cc_proto_library(
    name = "cgroup_cc_proto",
    deps = [":cgroup_proto"],
)

proto_library(
    name = "event_proto",
    srcs = ["event.proto"],
    deps = [
        ":log_proto",
        ":parameters_proto",
        ":subsystem_status_proto",
    ],
)

cc_proto_library(
    name = "event_cc_proto",
    deps = [":event_proto"],
)

proto_library(
    name = "stream_proto",
    srcs = ["stream.proto"],
)

cc_proto_library(
    name = "stream_cc_proto",
    deps = [":stream_proto"],
)

proto_library(
    name = "log_proto",
    srcs = ["log.proto"],
)

cc_proto_library(
    name = "log_cc_proto",
    deps = [":log_proto"],
)

proto_library(
    name = "subsystem_status_proto",
    srcs = ["subsystem_status.proto"],
)

cc_proto_library(
    name = "subsystem_status_cc_proto",
    deps = [":subsystem_status_proto"],
)

proto_library(
    name = "parameters_proto",
    srcs = ["parameters.proto"],
)

cc_proto_library(
    name = "parameters_cc_proto",
    deps = [":parameters_proto"],
)
