package(default_visibility = ["//visibility:public"])

cc_binary(
  name = "loop",
  srcs = [
    "loop.cc",
  ],
)

cc_binary(
  name = "echo",
  srcs = [
    "echo.cc",
  ],
)

cc_binary(
  name = "vars",
  srcs = [
    "vars.cc",
  ],
)

cc_binary(
  name = "module.so",
  srcs = [
    "module.cc",
  ],
  linkstatic = 0,
  linkshared = 1,
)

filegroup(
  name = "files",
  srcs = [
    "input_data.txt",
  ]
)