package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "loop",
    srcs = [
        "loop.cc",
    ],
    deps = [
        "@com_google_absl//absl/debugging:failure_signal_handler",
        "@com_google_absl//absl/debugging:symbolize",
    ],
)

cc_binary(
    name = "params",
    srcs = [
        "params.cc",
    ],
    deps = [
        "//stagezero/parameters",
        "@com_google_absl//absl/debugging:failure_signal_handler",
        "@com_google_absl//absl/debugging:symbolize",
        "@toolbelt//toolbelt",
    ],
)

cc_binary(
    name = "telemetry",
    srcs = [
        "telemetry.cc",
    ],
    deps = [
        "//stagezero/telemetry",
        "@com_google_absl//absl/debugging:failure_signal_handler",
        "@com_google_absl//absl/debugging:symbolize",
        "@toolbelt//toolbelt",
        ":telemetry_cc_proto",
    ],
)

cc_binary(
    name = "echo",
    srcs = [
        "echo.cc",
    ],
)

cc_binary(
    name = "echoraw",
    srcs = [
        "echoraw.cc",
    ],
)

cc_binary(
    name = "vars",
    srcs = [
        "vars.cc",
    ],
)

cc_binary(
    name = "oneshot",
    srcs = [
        "oneshot.cc",
    ],
)

cc_binary(
    name = "module.so",
    srcs = [
        "module.cc",
    ],
    linkshared = 1,
    linkstatic = 0,
    deps = [
        "//stagezero:symbols_lib",
        "//stagezero/parameters",
        "@com_google_absl//absl/debugging:failure_signal_handler",
        "@com_google_absl//absl/debugging:symbolize",
    ],
)

filegroup(
    name = "files",
    srcs = [
        "input_data.txt",
    ],
)

filegroup(
    name = "flight",
    srcs = glob(["flight/**"]),
)

proto_library(
    name = "chat_proto",
    srcs = ["proto/chat.proto"],
)

cc_proto_library(
    name = "chat_cc_proto",
    deps = [":chat_proto"],
)

proto_library(
    name = "telemetry_proto",
    srcs = ["proto/telemetry.proto"],
)

cc_proto_library(
    name = "telemetry_cc_proto",
    deps = [":telemetry_proto"],
)

cc_binary(
    name = "talker.so",
    srcs = [
        "talker.cc",
    ],
    linkshared = 1,
    linkstatic = 0,
    deps = [
        ":chat_cc_proto",
        "//module:protobuf_module",
        "@com_google_absl//absl/strings:str_format",
    ],
)

cc_binary(
    name = "listener.so",
    srcs = [
        "listener.cc",
    ],
    linkshared = 1,
    linkstatic = 0,
    deps = [
        ":chat_cc_proto",
        "//module:protobuf_module",
        "@com_google_absl//absl/strings:str_format",
    ],
)
