package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "localizer.so",
    srcs = [
        "localizer.cc",
    ],
    linkshared = 1,
    linkstatic = 0,
    deps = [
        "//module:protobuf_module",
        "//module:ros_module",
        "//robot/proto:localizer_cc_proto",
        "//robot/proto:map_cc_proto",
        "//robot/proto:vision_phaser",
        "//robot/ros_msgs:robot_msgs",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:span",
        "@toolbelt//toolbelt",
    ],
)

cc_binary(
    name = "gps.so",
    srcs = [
        "gps.cc",
    ],
    linkshared = 1,
    linkstatic = 0,
    deps = [
        "//module:ros_module",
        "//robot/ros_msgs:robot_msgs",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/types:span",
        "@toolbelt//toolbelt",
    ],
)
