package(default_visibility = ["//visibility:public"])

cc_binary(
    name = "logger.so",
    srcs = [
        "logger.cc",
    ],
    linkshared = 1,
    linkstatic = 0,
    deps = [
        "//module:protobuf_module",
        "//robot/proto:vision_cc_proto",
        "@com_google_absl//absl/strings:str_format",
        "@com_google_absl//absl/container:flat_hash_set",
        "@com_google_absl//absl/types:span",
        "@toolbelt//toolbelt",
        "@subspace//proto:subspace_cc_proto",
    ],
)
